# AgregatorEatParser

./: .gitignore  README.md  pyproject.toml
other/: config.py  main.py
src/: .env  crypto_win.py  eat_parser.py  main.py  main.spec  parser.py  test.py
src/browser/: core.py
