[tool.poetry]
name = "agregatoreatparser"
version = "0.1.0"
description = ""
authors = ["roci <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyppeteer = "^0.2.6"
python-decouple = "^3.5"
pywinauto = "^0.6.8"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
